--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ borg_one_file_system: true
 borg_exclude_from: []
 borg_encryption_passcommand: false
 borg_ssh_command: false
+borg_prune_enabled: true
 borg_retention_policy:
   keep_hourly: 3
   keep_daily: 7
