--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,3 +24,10 @@ bb_quota_size: 0
 bb_alertdays: 0
 bb_repo_name: "{{ inventory_hostname }}"
 bb_sshkey: "{{ root_user['ssh_public_key'] }}"
+
+borgmatic_cron_day: "*"
+borgmatic_cron_hour: "{{ 6 | random }}"
+borgmatic_cron_minute: "{{ 59 | random }}"
+borgmatic_large_repo_cron_day: "{{ 28 | random }}"
+borgmatic_large_repo_cron_hour: "{{ range(7, 24) | random }}"
+borgmatic_large_repo_cron_minute: "{{ 59 | random }}"
